# packet-speed-monitoring

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust-linux.yml  rust-macos.yml  rust-windows.yml  rust.yml
linux/: install.sh
linux/systemd/: packet-speed-monitoring.service
src/: device.rs  helpers.rs  listener.rs  logger.rs  main.rs  manager.rs  monitor.rs  publisher.rs  signal.rs  speed_info.rs  webserver.rs
src/monitor/: device.rs  hostname.rs  listener.rs  mac.rs  publisher.rs  speed_info.rs
tls/: cert.pem  key.pem
web/: index.html  log_viewer.html  styles.css
web/js/: controls.js  devices.js  main.js  render.js  sse.js  state.js  timezone.js
windows/: install.bat  install.ps1  make-installer.bat  make-installer.ps1
