[package]
name = "packet-speed-monitoring"
version = "0.2.2"
edition = "2024"
build = "build.rs"
authors = ["Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"]

[dependencies]
anyhow = "1.0"
async-dns-lookup = "0.1"
async-pcap = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = "0.4"
etherparse = "0.19"
fern = "0.7"
ipc-broker = "1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
