[package]
name = "packet-speed-monitoring"
version = "0.2.20"
edition = "2024"
build = "build.rs"
authors = ["Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"]

[dependencies]
anyhow = "1.0"
async-pcap = "0.1"
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = "0.4"
curl-http-client = "2.5"
dhcproto = { version = "0.14", features = ["serde"] }
etherparse = "0.19"
fern = "0.7"
hex = "0.4"
html-escape = "0.2"
ipc-broker = "1"
log = "0.4"
rustls = "0.23"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.20"
tokio = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }

